--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
         "@emailjs/browser": "^3.10.0",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
+        "@fontsource/hahmlet": "^5.0.7",
         "@fontsource/libre-baskerville": "^4.5.10",
         "@fontsource/merriweather-sans": "^4.5.10",
         "@fontsource/montserrat": "^4.5.13",
         "@fontsource/poppins": "^4.5.10",
+        "@fontsource/roboto-serif": "^5.0.8",
+        "@fontsource/roboto-slab": "^5.0.15",
         "@next/bundle-analyzer": "^13.1.1",
         "@types/react-slick": "^0.23.10",
         "axios": "^1.2.0",
